<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainGridView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingTop="20dp"
    android:rowCount="8"
    tools:context="device.sdk.sample.iccr.IccrSampleActivity">

    <TextView
        android:id="@+id/cardStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="0"
        android:hint="@string/card_not_inserted"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/StatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="0"
        android:minWidth="60dp"
        android:text="@string/status_str" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/atrModIsoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_iso" />

        <RadioButton
            android:id="@+id/atrModEmvBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_emv" />
    </RadioGroup>

    <Button
        android:id="@+id/ATRBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="1"
        android:text="@string/atr_str" />

    <Button
        android:id="@+id/PowerDownBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="2"
        android:text="@string/power_down_str" />

    <TextView
        android:id="@+id/HexCodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginLeft="10dp"
        android:layout_row="3"
        android:minWidth="60dp"
        android:text="@string/hex_str" />

    <EditText
        android:id="@+id/apdu_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginRight="10dp"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:ems="10"
        android:hint="@string/hex_input_str"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/APDUBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="4"
        android:text="@string/apdu_str" />

    <Button
        android:id="@+id/EMVBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="5"
        android:text="@string/get_emv_num" />

    <TextView
        android:id="@+id/resultStutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_row="6"
        android:minWidth="60dp"
        android:text="@string/result_status" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_row="7"
        android:padding="5dp">

        <TextView
            android:id="@+id/ResultStatusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</GridLayout>


